  - redis 4.5.5 -> 4.6.0
  - s3transfer 0.6.1 -> 0.6.2
  - soupsieve 2.4.1 -> 2.5
  - typing-extensions 4.6.3 -> 4.8.0
  - urllib3 1.26.16 -> 1.26.17
  - validators 0.20.0 -> 0.22.0
  - werkzeug 2.3.4 -> 2.3.7
  - setuptools 67.8.0 -> removed
- [TLS] Update default parameters for accepted TLS versions
### Fixed
- [API_PARSER] [CSC_DOMAINMANAGER] Correctly handle log stagnation and query interval
- [PKG_UPGRADE] Avoid trying to launch upgrade scripts when node is not bootstrapped
- [GUI] [ACLS] Improve 'Used by' presentation of Wokrflows using ACLs
- [GUI] [FRONTEND] Prevent mode modification if Frontend is linked to a Workflow/IDP
- [GUI] [BACKEND] Prevent mode modification if Backend is linked to a Workflow
- [CODE] [CLEAN] Minor corrections
- [SSO_CLIENT] [COOKIES] Fix cookies' banning when receiving application's response
- [SSO_CLIENT] [COOKIES] Correctly check the 'HttpOnly' attribute set from application's response
- [IDP] [COOKIES] Ensure 'HttpOnly' attribute is always set on IDP session cookies
- [UPGRADE] [SCRIPTS] Avoid updating Frontend's Redis internal IP when a custom port is used
- [CSS] Incorrect color conditions for custom form errors
- [API_PARSER] [CISCO_DUO] Unwanted error log on empty response


## [2.10.2] - 2023-09-25
### Fixed
- [API_PARSER] [CROWDSTRIKE] Delay query time of 2 minutes - to avoid missing events
- [FRONTEND] [FILEBEAT] Missing Rsyslog garbage templates in generated configurations
- [NODE] [STATE] Avoid errors on initial heartbeat monitoring
### Changed
- [FRONTEND] Set new default redis server to '127.0.0.5'
- [FRONTEND] [GUI] Show redis parameters when editing a Filebeat Listener to be able to select a different Redis cache
- [FRONTEND] [CONFIGURATION] Allow configured redis_password to be used for Filebeat Listener's cache


## [2.10.1] - 2023-09-12
### Fixed
- [LDAP_REPO] Avoid formatting errors for fields inserted to LDAP when creating/updating users